<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/spacing_60"
            android:layout_marginBottom="@dimen/spacing_29"
            android:layout_marginEnd="@dimen/spacing_10"
            android:layout_marginTop="@dimen/spacing_29"
            android:paddingBottom="@dimen/spacing_10"
            android:paddingEnd="@dimen/spacing_20"
            android:paddingStart="@dimen/spacing_20"
            android:paddingTop="@dimen/spacing_10"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_save"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_task_type" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/spacing_60"
            android:layout_marginStart="@dimen/spacing_10"
            android:paddingBottom="@dimen/spacing_10"
            android:paddingEnd="@dimen/spacing_20"
            android:paddingStart="@dimen/spacing_20"
            android:paddingTop="@dimen/spacing_10"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="@id/btn_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_cancel"
            app:layout_constraintTop_toTopOf="@id/btn_cancel" />

        <EditText
            android:id="@+id/et_task_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_55"
            android:layout_marginEnd="@dimen/spacing_20"
            android:layout_marginStart="@dimen/spacing_20"
            android:layout_marginTop="@dimen/spacing_10"
            android:background="@color/grey800"
            android:fontFamily="@font/lato_black"
            android:hint="@string/enter_the_task_name"
            android:inputType="text"
            android:paddingEnd="@dimen/spacing_16"
            android:paddingStart="@dimen/spacing_16"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/font_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_task_name" />

        <EditText
            android:id="@+id/et_task_description"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_90"
            android:layout_marginEnd="@dimen/spacing_20"
            android:layout_marginStart="@dimen/spacing_20"
            android:layout_marginTop="@dimen/spacing_10"
            android:background="@color/grey800"
            android:fontFamily="@font/lato_black"
            android:gravity="start"
            android:hint="@string/enter_the_task_description"
            android:lines="3"
            android:maxLines="3"
            android:padding="@dimen/spacing_16"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/font_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_task_description" />

        <EditText
            android:id="@+id/et_task_schedule_date"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_55"
            android:layout_marginEnd="@dimen/spacing_20"
            android:layout_marginStart="@dimen/spacing_20"
            android:layout_marginTop="@dimen/spacing_10"
            android:background="@color/grey800"
            android:fontFamily="@font/lato_black"
            android:gravity="start"
            android:hint="@string/enter_the_task_schedule_date"
            android:maxLines="1"
            android:padding="@dimen/spacing_16"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/font_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_task_schedule_date" />

        <EditText
            android:id="@+id/et_task_type"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_55"
            android:layout_marginEnd="@dimen/spacing_20"
            android:layout_marginStart="@dimen/spacing_20"
            android:layout_marginTop="@dimen/spacing_10"
            android:background="@color/grey800"
            android:fontFamily="@font/lato_black"
            android:gravity="start"
            android:hint="@string/enter_the_task_type"
            android:maxLines="1"
            android:padding="@dimen/spacing_16"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/font_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_task_type" />

        <ImageView
            android:id="@+id/iv_task_image"
            android:layout_width="@dimen/spacing_100"
            android:layout_height="@dimen/spacing_100"
            android:layout_marginTop="@dimen/spacing_10"
            android:background="@color/grey800"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_image_thumbnail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/abl_todo" />

        <TextView
            android:id="@+id/tv_task_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_20"
            android:layout_marginTop="@dimen/spacing_15"
            android:fontFamily="@font/lato_black"
            android:text="@string/task_name"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_task_image" />

        <TextView
            android:id="@+id/tv_task_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_20"
            android:layout_marginTop="@dimen/spacing_10"
            android:fontFamily="@font/lato_black"
            android:text="@string/task_description"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_task_name" />

        <TextView
            android:id="@+id/tv_task_schedule_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_20"
            android:layout_marginTop="@dimen/spacing_10"
            android:fontFamily="@font/lato_black"
            android:text="@string/task_schedule_date"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_task_description" />

        <TextView
            android:id="@+id/tv_task_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_20"
            android:layout_marginTop="@dimen/spacing_10"
            android:fontFamily="@font/lato_black"
            android:text="@string/task_type"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_task_schedule_date" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/abl_todo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingBottom="@dimen/spacing_0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tb_add_todo"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@color/white900">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_todo_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_black"
                        android:maxLines="1"
                        android:text="@string/new_task"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_16"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>